# s21_matrix_cpp

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  s21_matrix_oop.cpp  s21_matrix_oop.hpp
src/tests/: test_matrix_class.cpp  test_runner.cpp
